# imap-connector

./: Cargo.toml  Connector.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  config-example.yaml
.github/workflows/: ci.yml
src/: config.rs  event.rs  imap_util.rs  main.rs  record.rs  source.rs  tasks.rs
